Prettified the printed generator

--- a/pack.toml
+++ b/pack.toml
@@ -18,5 +18,5 @@ ipkg = "contrib-nat-division.ipkg"
 [custom.all.deptycheck]
 type = "github"
 url = "https://github.com/buzden/deptycheck"
-commit = "latest:master"
+commit = "e60d3706d22ae00b79b48007f0bda6917acd7869"
 ipkg = "deptycheck.ipkg"
