--- a/pack.toml
+++ b/pack.toml
@@ -19,5 +19,6 @@ ipkg = "contrib-nat-division.ipkg"
 type = "github"
 url = "https://github.com/buzden/deptycheck"
 # commit = "e60d3706d22ae00b79b48007f0bda6917acd7869"
-commit = "e702b57a0419221963e45e883067c18d620cd3b2"
+# commit = "e702b57a0419221963e45e883067c18d620cd3b2"
+commit = "72b514ee4c6c394a2dcfc5c1028ec55a1ecd8aff"
 ipkg = "deptycheck.ipkg"
