--- a/pack.toml
+++ b/pack.toml
@@ -15,10 +15,8 @@ url = "https://github.com/elkcl/idris2-contrib-nat-division"
 commit = "latest:main"
 ipkg = "contrib-nat-division.ipkg"
 
-# [custom.all.deptycheck]
-# type = "github"
-# url = "https://github.com/buzden/deptycheck"
-# # commit = "e60d3706d22ae00b79b48007f0bda6917acd7869"
-# # commit = "e702b57a0419221963e45e883067c18d620cd3b2"
-# commit = "72b514ee4c6c394a2dcfc5c1028ec55a1ecd8aff"
-# ipkg = "deptycheck.ipkg"
+[custom.all.deptycheck]
+type = "github"
+url = "https://github.com/buzden/deptycheck"
+commit = "5a5174527beb28cc69a19140fc148d682f37ff6f"
+ipkg = "deptycheck.ipkg"
