--- a/pack.toml
+++ b/pack.toml
@@ -15,8 +15,8 @@ url = "https://github.com/elkcl/idris2-contrib-nat-division"
 commit = "latest:main"
 ipkg = "contrib-nat-division.ipkg"
 
-[custom.all.deptycheck]
-type = "github"
-url = "https://github.com/buzden/deptycheck"
-commit = "5a5174527beb28cc69a19140fc148d682f37ff6f"
-ipkg = "deptycheck.ipkg"
+# [custom.all.deptycheck]
+# type = "github"
+# url = "https://github.com/buzden/deptycheck"
+# commit = "5a5174527beb28cc69a19140fc148d682f37ff6f"
+# ipkg = "deptycheck.ipkg"
